Added google ads

--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ section img {
 	height: auto;
 }
 
+#ad-footer {
+	position: absolute;
+	margin-left: -30%;
+}
+
 
 
 /* fonts, types, sizes and colors
